2003-01-24  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	A patch from Allin Cottrell <cottrell@wfu.edu> to fix unreadable
 	low-numbered linetypes in EMF terminal monochrome mode.
	
	* term/emf.trm (emf_color): New variable.
	(EMF_options): Initialize it according to monochrome/colour option
 	status.
	(EMF_dashtype, EMF_point): Use it instead of constan EMF_COLORS.
	(TERM_HELP): Slightly reformatted for linelength.

2003-01-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot.c src/set.c docs/gnuplot.doc: Let the default terminal
 	or that (re)set from gnuplot's ini file pushed automatically
 	during gnuplot's startup. Consequently, 'set term pop' will be
 	always defined to be the default terminal on the given platform,
 	unless changed explicitly by 'set term push'.

	* src/misc.h src/misc.c: New routines push_terminal() and
 	pop_terminal().

2003-01-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	New Windows menu contributed by John Bollinger <bbands@yahoo.com>:
	
	* src/win/wgnuplot.mnu: The new menu definition itself.

	* src/win/wmenu.c (MACROLEN): Increased to 10000 to accomodate
 	larger menu.

	* src/win/wresourc.h (NUMMENU): Increased to 512 to accomodate
 	larger menu.

	* src/win/wgnuplib.h (WGNUPLOTVERSION): Bumped up because NUMMENU
 	change makes DLL API incompatible.

2003-01-22  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* FAQ, src/syscfg.h: Update FAQ location.

	* configure.in: Fix faulty regexp in sed command and vgagl reporting.

2003-01-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/post.trm (ENHPS_recurse): Fix buggy PS output if backslash
 	is at the end of the input string.

2003-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pstricks.trm: Support for PM3D. Thanks to Tim Piessens for
	contribution.

2003-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/README src/color.c term/post.trm: Changed "continous" to
	"continuous".
